# long_memory_sthocastic_cycles

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
data/: MONTHLY.csv
notebooks/: energy_demand_analysis.ipynb  sunspots_cycle_analysis.ipynb
scripts/: energy_gridsearch.py
src/cyclical_fractional_test/: __init__.py  api.py  chebyshev.py  config.py  diagnostics.py  evaluation.py  exceptions.py  filters.py  grid.py  model.py  prediction.py  regression.py  results.py  scoring.py  spectral.py  validation.py
tests/: test_api.py  test_chebyshev.py  test_diagnostics.py  test_energy_gridsearch.py  test_evaluation.py  test_filters.py  test_grid.py  test_model.py  test_prediction.py  test_public_api.py  test_regression.py  test_scoring.py  test_spectral.py  test_validation.py
